// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ContentsListItem renders correctly when active or inactive 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 6px 0 6px 1px;
  --active-border-color: #001E2B;
  --border-color: #E8EDEB;
}

.emotion-0:hover,
.emotion-0:active {
  padding-left: 4px;
}

.dark-theme .emotion-0 {
  --active-border-color: #C1C7C6;
  --border-color: #3D4F58;
}

@media not all and (max-width: 1024px) {
  .emotion-0 {
    border-left-style: solid;
    border-left-width: 2px;
    border-left-color: var(--active-border-color);
    padding-left: 0;
  }

  .emotion-0:hover,
  .emotion-0:active {
    border-left-width: 2px;
    border-left-color: var(--active-border-color);
    padding-left: 0;
  }
}

.emotion-1 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: inline;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
  color: var(--font-color-primary);
  font-size: 13px;
  line-height: 16px;
  font-weight: normal;
  font-weight: 600;
  display: inline-block;
  padding-left: 0px;
  width: 100%;
}

.emotion-1:hover,
.emotion-1[data-hover='true'],
.emotion-1:focus-visible,
.emotion-1[data-focus='true'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-1:focus {
  outline: none;
}

.emotion-1:hover,
.emotion-1[data-hover='true'] {
  text-decoration-color: #E8EDEB;
}

.emotion-1:focus-visible,
.emotion-1[data-focus='true'] {
  text-decoration-color: #016BF8;
}

.emotion-1>span>code,
.emotion-1>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

@media not all and (max-width: 1024px) {
  .emotion-1 {
    padding-left: calc(14px + 0px);
  }
}

.emotion-1:hover,
.emotion-1:active {
  color: currentColor;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1 span>span {
  position: unset;
}

<li
    class="emotion-0"
  >
    <a
      class="lg-ui-0001 emotion-1"
      href="#item-1"
      target="_self"
    >
      <span>
        Item 1
      </span>
    </a>
  </li>
  .emotion-0 {
  padding: 6px 0 6px 1px;
  --active-border-color: #001E2B;
  --border-color: #E8EDEB;
}

.emotion-0:hover,
.emotion-0:active {
  padding-left: 4px;
}

.dark-theme .emotion-0 {
  --active-border-color: #C1C7C6;
  --border-color: #3D4F58;
}

@media not all and (max-width: 1024px) {
  .emotion-0 {
    border-left-style: solid;
    border-left-width: 1px;
    border-left-color: var(--border-color);
  }

  .emotion-0:hover,
  .emotion-0:active {
    border-left-width: 2px;
    border-left-color: var(--active-border-color);
    padding-left: 0;
  }
}

.emotion-1 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: inline;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
  color: var(--font-color-primary);
  font-size: 13px;
  line-height: 16px;
  font-weight: normal;
  display: inline-block;
  padding-left: 0px;
  width: 100%;
}

.emotion-1:hover,
.emotion-1[data-hover='true'],
.emotion-1:focus-visible,
.emotion-1[data-focus='true'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-1:focus {
  outline: none;
}

.emotion-1:hover,
.emotion-1[data-hover='true'] {
  text-decoration-color: #E8EDEB;
}

.emotion-1:focus-visible,
.emotion-1[data-focus='true'] {
  text-decoration-color: #016BF8;
}

.emotion-1>span>code,
.emotion-1>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

@media not all and (max-width: 1024px) {
  .emotion-1 {
    padding-left: calc(14px + 0px);
  }
}

.emotion-1:hover,
.emotion-1:active {
  color: currentColor;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1 span>span {
  position: unset;
}

<li
    class="emotion-0"
  >
    <a
      class="lg-ui-0001 emotion-1"
      href="#item-2"
      target="_self"
    >
      <span>
        Item 2
      </span>
    </a>
  </li>
</DocumentFragment>
`;

exports[`ContentsListItem renders with different depths 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 6px 0 6px 1px;
  --active-border-color: #001E2B;
  --border-color: #E8EDEB;
}

.emotion-0:hover,
.emotion-0:active {
  padding-left: 4px;
}

.dark-theme .emotion-0 {
  --active-border-color: #C1C7C6;
  --border-color: #3D4F58;
}

@media not all and (max-width: 1024px) {
  .emotion-0 {
    border-left-style: solid;
    border-left-width: 1px;
    border-left-color: var(--border-color);
  }

  .emotion-0:hover,
  .emotion-0:active {
    border-left-width: 2px;
    border-left-color: var(--active-border-color);
    padding-left: 0;
  }
}

.emotion-1 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: inline;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
  color: var(--font-color-primary);
  font-size: 13px;
  line-height: 16px;
  font-weight: normal;
  display: inline-block;
  padding-left: 0px;
  width: 100%;
}

.emotion-1:hover,
.emotion-1[data-hover='true'],
.emotion-1:focus-visible,
.emotion-1[data-focus='true'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-1:focus {
  outline: none;
}

.emotion-1:hover,
.emotion-1[data-hover='true'] {
  text-decoration-color: #E8EDEB;
}

.emotion-1:focus-visible,
.emotion-1[data-focus='true'] {
  text-decoration-color: #016BF8;
}

.emotion-1>span>code,
.emotion-1>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

@media not all and (max-width: 1024px) {
  .emotion-1 {
    padding-left: calc(14px + 0px);
  }
}

.emotion-1:hover,
.emotion-1:active {
  color: currentColor;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1 span>span {
  position: unset;
}

<li
    class="emotion-0"
  >
    <a
      class="lg-ui-0001 emotion-1"
      href="#item-1"
      target="_self"
    >
      <span>
        Item 1
      </span>
    </a>
  </li>
  .emotion-0 {
  padding: 6px 0 6px 1px;
  --active-border-color: #001E2B;
  --border-color: #E8EDEB;
}

.emotion-0:hover,
.emotion-0:active {
  padding-left: 4px;
}

.dark-theme .emotion-0 {
  --active-border-color: #C1C7C6;
  --border-color: #3D4F58;
}

@media not all and (max-width: 1024px) {
  .emotion-0 {
    border-left-style: solid;
    border-left-width: 1px;
    border-left-color: var(--border-color);
  }

  .emotion-0:hover,
  .emotion-0:active {
    border-left-width: 2px;
    border-left-color: var(--active-border-color);
    padding-left: 0;
  }
}

.emotion-1 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: inline;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
  color: var(--font-color-primary);
  font-size: 13px;
  line-height: 16px;
  font-weight: normal;
  display: inline-block;
  padding-left: 16px;
  width: 100%;
}

.emotion-1:hover,
.emotion-1[data-hover='true'],
.emotion-1:focus-visible,
.emotion-1[data-focus='true'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-1:focus {
  outline: none;
}

.emotion-1:hover,
.emotion-1[data-hover='true'] {
  text-decoration-color: #E8EDEB;
}

.emotion-1:focus-visible,
.emotion-1[data-focus='true'] {
  text-decoration-color: #016BF8;
}

.emotion-1>span>code,
.emotion-1>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

@media not all and (max-width: 1024px) {
  .emotion-1 {
    padding-left: calc(14px + 16px);
  }
}

.emotion-1:hover,
.emotion-1:active {
  color: currentColor;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1 span>span {
  position: unset;
}

<li
    class="emotion-0"
  >
    <a
      class="lg-ui-0001 emotion-1"
      href="#item-2"
      target="_self"
    >
      <span>
        Item 2
      </span>
    </a>
  </li>
</DocumentFragment>
`;
